public static class Constants
{
    #region GAMEOBJECT_TAGS
    //Variable to hold tag for the ground
    public static string GROUND_TAG = "Ground";
    public static string TOWER_TAG = "Tower";
    #endregion

    #region COLLISION_LAYERS
    public static string ENEMY_LAYER = "Enemy";
    #endregion

    #region ANIMATION_TRANSITION_NAMES
    public static string MONSTER_WALK = "Walk";
    public static string MONSTER_HIT = "Hurt";
    public static string MONSTER_DEAD = "Dead";
    public static string MONSTER_IDLE = "Idle";
    public static string MONSTER_ATTACK = "Attack";
    #endregion
}